--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "tailwindcss": "^3.3.5",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
-    "vite-plugin-pwa": "^0.17.4"
+    "vite-plugin-pwa": "^0.17.4",
+    "workbox-precaching": "^7.0.0"
   }
 }
