--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - 8093:8093
     volumes:
       - ./data/pocketbase:/pb/pb_data
-      - ./pocketbase/migrations:/pb/pb_migrations
+      - ./pb_migrations:/pb/pb_migrations
+      - ./pb_hooks:/pb/pb_hooks
     environment:
       - VIRTUAL_HOST=pb.*
       - VIRTUAL_PORT=8093
