--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "pocketbase": "^0.20.1",
     "react": "^18.2.0",
     "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
+    "sort-by": "^1.2.0",
     "tailwind-merge": "^2.1.0",
     "usehooks-ts": "^2.9.1"
   },
