--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,7 +14,7 @@ FROM alpine:latest
 COPY --from=builder /pb/pocketbase /pb/pocketbase
 
 # uncomment to copy the local pb_migrations dir into the image
-# COPY ./pb_migrations /pb/pb_migrations
+COPY ./pb_migrations /pb/pb_migrations
 
 # uncomment to copy the local pb_hooks dir into the image
 # COPY ./pb_hooks /pb/pb_hooks
