--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - 8093:8093
     volumes:
-      - ./pb_data:/pb/pb_data
+      - ./backend/pb_data:/pb/pb_data
       # - ./pb_migrations:/pb/pb_migrations
       # - ./pb_hooks:/pb/pb_hooks
     environment:
