--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.0",
     "sort-by": "^1.2.0",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.1.0",
     "usehooks-ts": "^2.9.1"
   },
